--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                     <li class="item">
                         <a class="link" href="#">
                             <article class="card-projects">
-                                <div><img src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294"></div>
+                                <img src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294">
                                 <div class="text-projects">
                                     <h2 class="projects-portfolio">Технокряк</h2>
                                     <p class="description-projects">Веб-сайт</p>
