--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    <main>
        <!--head-->
         <section class="head section">
-            <div class="head container">
+            <div class="container">
                 <h1 class="head-title">Эффективные решения для вашего бизнеса</h1>
                 <button class="button" type="button"> Заказать услугу</button>
             </div>
@@ -65,7 +65,7 @@
             </div>
         </section>
         <!--What are we doing-->
-        <section class="section">
+        <section class="solutions section">
             <div class="container">
                 <h2 class="head-projects">Чем мы занимаемся</h2>
                 <ul class="projects list">
