--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-   <header>
+   <header class="header">
         <div class="header-nav container">
             <nav class="main-nav">
                 <a class="logo link" href="./index.html">Web<span class="logo-black">Studio</span></a>
